--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.18.0",
-    "react-router-dom": "^6.18.0"
+    "react-router": "6.16.0",
+    "react-router-dom": "6.16.0",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
