--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "apexcharts": "^3.44.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-router": "6.16.0",
     "react-router-dom": "6.16.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.69.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.201",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "lodash": "^4.17.21",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
