--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.17",
     "apexcharts": "^3.44.0",
+    "bite": "^0.1.0-4",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-query": "3",
     "react-router": "6.16.0",
     "react-router-dom": "6.16.0",
     "react-toastify": "^9.1.3",
@@ -29,6 +31,6 @@
     "@vitejs/plugin-react": "^2.0.0",
     "lodash": "^4.17.21",
     "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "vite": "^3.2.7"
   }
 }
